2006-07-13 Robert Schwebel <r.schwebel@pengutronix.de>

	* nmap: version bumped (4.01 -> 4.11); patch by Chuck Robey
	* rsync: version bumped (2.6.6 -> 2.6.8); patch by Chuck Robey

2006-07-05 Robert Schwebel <r.schwebel@pengutronix.de>

	* configs: PROJECTDIR -> PTXDIST_WORKSPACE; patch by Graeme Brown

2006-07-01 Robert Schwebel <r.schwebel@pengutronix.de>

	* autobuilder: fixed mechanism for multiple subprojects
	* moved ptxdist-0.10-trunk to ptxdist-trunk

2006-07-01 Robert Schwebel <r.schwebel@pengutronix.de>

	* release: released 0.10.4

2006-06-30 Marc Kleine-Budde <m.kleine-budde@pengutronix.de>

	* ptxdist: write new fast dependency generator

2006-06-30 Robert Schwebel <r.schwebel@pengutronix.de>

	* ChangeLog: added diffs since 0.10.3
	* busybox: update to 1.1.3
	* alsalib, alsautils: update to 1.0.11
	* apache2: update to 2.0.58
	* apache: update to 1.1.36
	* bash: update to 3.1
	* blackbox: mark as broken
	* bridge-utils: ipkgized
	* crosstool: added correct cpu support for x86
	* cyclictest: update to 0.8
	* db41: changed download site
	* db44: added
	* dbench: update to 3.04
	* dhcp: update to 3.0.4
	* e2fsprogs: update to 1.39
	* ffmpeg: added (patch by Erwin Rol)
	* findutils: added (patch by Juergen Beisert)
	* cmake: added
	* host-kconfig, host-lxdialog: removed, obsolete
	* pelts: added (patch by Sascha Hauer)
	* initng: several additions; update to 0.6.7 (Erwin Rol)
	* iproute2: added (Erwin Rol)
	* kernel: make config names configurable; support testing
	  kernels  (Sascha Hauer)
	* live: added (Erwin Rol)
	* mc: added (Sascha Hauer)
	* memedit: update to 0.7
	* mesalib: update to 6.5
	* mtdutils: update to 1.0.0
	* nfsutils: update to 1.0.8
	* qtopia: added (Sascha Hauer, Robert Schwebel)
	* sdl: update to 1.2.10 (Erwin Rol)
	* syslog ng: update to 1.9.11
	* unionfs: added (Marc Kleine-Budde)
	* ptxdist: added 'ptxdist boardsetup' (Robert Schwebel)
	* ptxdist: made more variables local (Marc Kleine-Budde)