@@ -4,12 +4,6 @@ config GLIBC_VERSION
 	default "2.3.6"
 	depends on GLIBC
 
-config GLIBC_DEBUG
-	bool "Don't strip debugging symbols"
-	depends on BUILD_USERLAND
-	help
-	  FIXME: This item needs to be documented
-
 # ----------
 
 comment	"Install options"
